lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPlaintextContent,
  )
>()
external ffi.Pointer<SignalFfiError> signal_plaintext_content_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPlaintextContent obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPlaintextContent,
  )
>()
external ffi.Pointer<SignalFfiError> signal_plaintext_content_get_body(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPlaintextContent obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPlaintextContent>,
    SignalConstPointerDecryptionErrorMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_plaintext_content_from_decryption_error_message(
  ffi.Pointer<SignalMutPointerPlaintextContent> out,
  SignalConstPointerDecryptionErrorMessage m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeyBundle>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    SignalConstPointerPublicKey,
    ffi.Uint32,
    SignalConstPointerPublicKey,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
    ffi.Uint32,
    SignalConstPointerKyberPublicKey,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_new(
  ffi.Pointer<SignalMutPointerPreKeyBundle> out,
  int registration_id,
  int device_id,
  int prekey_id,
  SignalConstPointerPublicKey prekey,
  int signed_prekey_id,
  SignalConstPointerPublicKey signed_prekey,
  SignalBorrowedBuffer signed_prekey_signature,
  SignalConstPointerPublicKey identity_key,
  int kyber_prekey_id,
  SignalConstPointerKyberPublicKey kyber_prekey,
  SignalBorrowedBuffer kyber_prekey_signature,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_get_identity_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPreKeyBundle p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_bundle_get_signed_pre_key_signature(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_get_registration_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_get_device_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_bundle_get_signed_pre_key_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_get_pre_key_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_get_pre_key_public(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_bundle_get_signed_pre_key_public(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_get_kyber_pre_key_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPublicKey>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_bundle_get_kyber_pre_key_public(
  ffi.Pointer<SignalMutPointerKyberPublicKey> out,
  SignalConstPointerPreKeyBundle bundle,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_bundle_get_kyber_pre_key_signature(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPreKeyBundle bundle,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignedPreKeyRecord>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_deserialize(
  ffi.Pointer<SignalMutPointerSignedPreKeyRecord> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_get_signature(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_get_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint64>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_get_timestamp(
  ffi.Pointer<ffi.Uint64> out,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_signed_pre_key_record_get_public_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPrivateKey>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_signed_pre_key_record_get_private_key(
  ffi.Pointer<SignalMutPointerPrivateKey> out,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPreKeyRecord>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_deserialize(
  ffi.Pointer<SignalMutPointerKyberPreKeyRecord> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_get_signature(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_get_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint64>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_get_timestamp(
  ffi.Pointer<ffi.Uint64> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPublicKey>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_get_public_key(
  ffi.Pointer<SignalMutPointerKyberPublicKey> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberSecretKey>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_get_secret_key(
  ffi.Pointer<SignalMutPointerKyberSecretKey> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberKeyPair>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_get_key_pair(
  ffi.Pointer<SignalMutPointerKyberKeyPair> out,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignedPreKeyRecord>,
    ffi.Uint32,
    ffi.Uint64,
    SignalConstPointerPublicKey,
    SignalConstPointerPrivateKey,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_new(
  ffi.Pointer<SignalMutPointerSignedPreKeyRecord> out,
  int id,
  int timestamp,
  SignalConstPointerPublicKey pub_key,
  SignalConstPointerPrivateKey priv_key,
  SignalBorrowedBuffer signature,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPreKeyRecord>,
    ffi.Uint32,
    ffi.Uint64,
    SignalConstPointerKyberKeyPair,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_new(
  ffi.Pointer<SignalMutPointerKyberPreKeyRecord> out,
  int id,
  int timestamp,
  SignalConstPointerKyberKeyPair key_pair,
  SignalBorrowedBuffer signature,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeyRecord>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_deserialize(
  ffi.Pointer<SignalMutPointerPreKeyRecord> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_get_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_get_public_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPreKeyRecord obj,
);
